# semester-work-avl-tree

./: CMakeLists.txt  README.md  main.cpp
benchmark/: CMakeLists.txt  delete_bench.csv  delete_benchmark.cpp  insert_bench.csv  insert_benchmark.cpp  search_bench.csv  search_benchmark.cpp
dataset/: generate_csv_dataset.py
dataset/data/01/: 100.csv  1000.csv  10000.csv  100000.csv  500.csv  5000.csv  50000.csv  500000.csv
dataset/data/02/: 100.csv  1000.csv  10000.csv  100000.csv  500.csv  5000.csv  50000.csv  500000.csv
dataset/data/03/: 100.csv  1000.csv  10000.csv  100000.csv  500.csv  5000.csv  50000.csv  500000.csv
dataset/data/04/: 100.csv  1000.csv  10000.csv  100000.csv  500.csv  5000.csv  50000.csv  500000.csv
dataset/data/05/: 100.csv  1000.csv  10000.csv  100000.csv  500.csv  5000.csv  50000.csv  500000.csv
dataset/data/06/: 100.csv  1000.csv  10000.csv  100000.csv  500.csv  5000.csv  50000.csv  500000.csv
dataset/data/07/: 100.csv  1000.csv  10000.csv  100000.csv  500.csv  5000.csv  50000.csv  500000.csv
dataset/data/08/: 100.csv  1000.csv  10000.csv  100000.csv  500.csv  5000.csv  50000.csv  500000.csv
dataset/data/09/: 100.csv  1000.csv  10000.csv  100000.csv  500.csv  5000.csv  50000.csv  500000.csv
dataset/data/10/: 100.csv  1000.csv  10000.csv  100000.csv  500.csv  5000.csv  50000.csv  500000.csv
examples/: CMakeLists.txt  delete_example.cpp  insert_example.cpp  search_example.cpp
include/: data_structure.hpp
src/: data_structure.cpp
